data/datasets/spec_bug_fix_kics/azure/kics_azure_virtual_network_with_ddos_protection_plan_disabled_002/patch.tf
resource "azurerm_resource_group" "example" {
 name = "example-resources"
 location = "West Europe"
}

 resource "azurerm_network_security_group" "example" {
 name = "acceptanceTestSecurityGroup1"
 location = azurerm_resource_group.example.location
 resource_group_name = azurerm_resource_group.example.name
}

 resource "azurerm_network_ddos_protection_plan" "example" {
 name = "ddospplan1"
 location = azurerm_resource_group.example.location
 resource_group_name = azurerm_resource_group.example.name
}

 resource "azurerm_virtual_network" "positive1" {
 name = "virtualNetwork1"
 location = azurerm_resource_group.example.location
 resource_group_name = azurerm_resource_group.example.name
 address_space = ["10.0.0.0/16"]
 dns_servers = ["10.0.0.4", "10.0.0.5"]

 ddos_protection_plan {
 id = azurerm_network_ddos_protection_plan.example.id
 enable = true
}

 subnet {
 name = "subnet1"
 address_prefix = "10.0.1.0/24"
}

 subnet {
 name = "subnet2"
 address_prefix = "10.0.2.0/24"
}

 subnet {
 name = "subnet3"
 address_prefix = "10.0.3.0/24"
 security_group = azurerm_network_security_group.example.id
}

 tags = {
 environment = "Production"
}
}
